@@ -5,7 +5,7 @@ jEdit 4.5 version history
 {{{ Version 4.5.0
 
 Thanks to Shlomy Reinstein, Alan Ezust, Jarek Czekalski, Michael Pradel, Evan
-Wright, Matthieu Casanova and Björn "Vampire" Kautler for contributing to this
+Wright, Matthieu Casanova, Nathan Gray and Björn "Vampire" Kautler for contributing to this
 release.
 
 {{{ Bug Fixes
@@ -49,6 +49,14 @@ release.
 - Fixed #3474515 - MiscUtilities.expandVariables does not expand ~ (Alan Ezust)
 
 }}}
+
+{{{ UI
+
+- Changed menus to use Mac-specific symbols for accelerator keys when using OS X
+  and the native look & feel (SF.net patch #1950147 - Nathan Gray)
+
+}}}
+
 {{{ Miscellaneous
 
 - Document jEdit's command line parameters into Activity Log 
